Convert acorn to a mod