@@ -6,8 +6,8 @@
 
 	<parent>
 		<groupId>com.avereon.pom</groupId>
-		<artifactId>jar</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<artifactId>mod</artifactId>
+		<version>3.1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.avereon</groupId>
@@ -36,46 +36,18 @@
 		</repository>
 	</repositories>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>avn</id>
+			<url>https://repo.avereon.com/avn</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<properties>
-		<java.version>11</java.version>
-		<project.timestamp>${maven.build.timestamp}</project.timestamp>
-		<product-name>${project.name}</product-name>
-		<product-identifier>acorn</product-identifier>
-		<slf4j.version>1.8.0-beta0</slf4j.version>
+		<images-folder>target/main/images</images-folder>
 	</properties>
 
 	<dependencies>
-
-		<dependency>
-			<groupId>com.avereon</groupId>
-			<artifactId>zevra</artifactId>
-			<version>0.1-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
 
 	</dependencies>
 
@@ -119,24 +91,16 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>testCompile</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- Version comes from parent -->
+				<configuration>
+					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
+					<argLine>
+						--add-opens=com.avereon.acorn/com.avereon.acorn=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
+
 		</plugins>
 
 	</build>
